<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <EditText
        android:id="@+id/editTxtCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxtCompanyName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTxtCompanyStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtCompanyStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxtCompanyStock"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxtCompanyName" />

    <EditText
        android:id="@+id/editTxtCompanyLogoUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxtCompanyLogoUrl"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxtCompanyStock" />

    <Button
        android:id="@+id/onSaveCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onSaveCompany"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxtCompanyLogoUrl" />

</android.support.constraint.ConstraintLayout>