<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <EditText
        android:id="@+id/editTxtProductName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxtProductName"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/editTxtProductUrl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtProductUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxtProductUrl"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxtProductName"
        app:layout_constraintBottom_toTopOf="@id/editTxtProductImgUrl"
        />

    <EditText
        android:id="@+id/editTxtProductImgUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTxtProductImgUrl"
        android:inputType="textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxtProductUrl"
        app:layout_constraintBottom_toTopOf="@id/onSaveProduct"/>

    <Button
        android:id="@+id/onSaveProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onSaveProduct"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTxtProductImgUrl" />

</android.support.constraint.ConstraintLayout>