<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar_product"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="?actionBarSize" >

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/btn_nav_back"

        />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"

        android:background="@android:color/holo_green_dark"
        android:text="@string/btnCancel"

        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/txtBarTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/product"
        android:textColor="@android:color/white"
        android:textSize="20dp"

        />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_gravity="right"
        android:background="@android:color/holo_green_dark"
        android:text="@string/btnSave"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/imgBtnAdd"
        android:layout_marginEnd="10dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="right"
        android:src="@drawable/btn_nav_add"

         />


</android.support.v7.widget.Toolbar>